--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0"
   },
