--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.23.0"
+    "react-native-screens": "^3.23.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
