--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~49.0.5",
     "expo-splash-screen": "~0.20.5",
