--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@tanstack/react-query": "^4.35.0",
     "axios": "^1.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~49.0.5",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.46.1",
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.7.1",
