--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "react-hook-form": "^7.46.1",
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.23.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "yup": "^1.2.0",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
