--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.46.1",
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.2.0",
