--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@expo-google-fonts/manrope": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@hookform/resolvers": "^3.3.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.2",
-    "@react-native-community/datetimepicker": "^7.6.0",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -23,23 +23,23 @@
     "@tanstack/react-query": "^4.35.0",
     "axios": "^1.5.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "expo": "~49.0.5",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^48.0.0",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-native": "0.72.4",
+    "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-picker-select": "^8.1.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "yup": "^1.2.0",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
     "@types/react-native-dotenv": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -51,7 +51,7 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.2",
     "react-native-dotenv": "^3.4.9",
-    "typescript": "*"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
